kubernetes_resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-server
  template:
    metadata:
      labels:
        app: fastapi-server
    spec:
      containers:
        - name: fastapi-server
          image: daraniel/kubernetes-test-server:latest

          #          image: docker:latest
          #          command: [ "sh", "-c", "cd /app && docker build -t my-image. && docker push my-image" ]
          #          volumeMounts:
          #            - name: app-volume
          #              mountPath: /app

          ports:
            - containerPort: 8000
