kubernetes_resources/mysql_deploy_and_serve.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-mysql
  labels:
    app: fastapi-server
spec:
  ports:
    - port: 3306
  selector:
    app: fastapi-server
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-mysql
  labels:
    app: fastapi-server
spec:
  selector:
    matchLabels:
      app: fastapi-server
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fastapi-server
        tier: mysql
    spec:
      containers:
        - image: mysql:8.0
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
