kubernetes_resources/deploy_and_serve_with_mysql.yaml
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: fastapi-server-claim
#  labels:
#    app: fastapi-server
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 10Mi
#---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-server
  labels:
    app: fastapi-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-server
  template:
    metadata:
      labels:
        app: fastapi-server
    spec:
      containers:
        - name: fastapi-server
          image: daraniel/kubernetes-test-server:master
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-server
  labels:
    app: fastapi-server
spec:
  selector:
    app: fastapi-server
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30007
  #  type: ClusterIP
  #  type: NodePort
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-server
  labels:
    app: fastapi-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-clusterissuer
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: fastapi-host.com
      http:
        paths:
          - path: /(/|$)(.*) # or something like /app/v1(/|$)(.*)
            pathType: Prefix
            #            pathType: ImplementationSpecific # There seems to be some bugs with using Prefix. If it causes problems, try this method
            backend:
              service:
                name: fastapi-server
                port:
                  number: 8000
